Added full documentation button

--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -32,6 +32,7 @@
                               <Label layoutY="5.0" style="-fx-font-family: Montserrat;" text="Version:" textFill="#e4e4e4" />
                            </children>
                         </Group>
+                        <Button fx:id="openDocumentationButton" layoutX="424.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Full Documentation" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
