--- a/src/main/resources/utils/texture/createTexture.fxml
+++ b/src/main/resources/utils/texture/createTexture.fxml
@@ -10,7 +10,7 @@
    <children>
       <Group layoutX="27.0" layoutY="26.0">
          <children>
-            <Label layoutY="3.0" style="-fx-font-family: Montserrat;" text="Name:" textFill="#eeeeee">
+            <Label layoutY="3.0" styleClass="default-label" text="Name:" textFill="#eeeeee">
                <font>
                   <Font size="16.0" />
                </font>
@@ -20,7 +20,7 @@
       </Group>
       <Group layoutX="325.0" layoutY="26.0">
          <children>
-            <Label layoutX="-18.0" layoutY="3.0" style="-fx-font-family: Montserrat;" text="Location:" textFill="#eeeeee">
+            <Label layoutX="-18.0" layoutY="3.0" styleClass="default-label" text="Location:" textFill="#eeeeee">
                <font>
                   <Font size="16.0" />
                </font>
