--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -32,7 +32,8 @@
                               <Label layoutY="5.0" styleClass="default-label" text="Version:" textFill="#e4e4e4" />
                            </children>
                         </Group>
-                        <Button fx:id="openDocumentationButton" layoutX="424.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Full Documentation" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
+                        <Button fx:id="globalPreferencesButton" layoutX="444.0" layoutY="14.0" mnemonicParsing="false" styleClass="default-choose-button" text="Global Preferences" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
+                        <Button fx:id="openDocumentationButton" layoutX="436.0" layoutY="52.0" mnemonicParsing="false" styleClass="default-choose-button" text="Full Documentation" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="52.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
