--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@engine.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.EngineController">
    <children>
-      <TabPane fx:id="tabBar" layoutY="28.0" prefHeight="386.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane fx:id="tabBar" layoutY="28.0" prefHeight="373.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="28.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
           <Tab fx:id="projectTab" text="Project">
             <content>
@@ -45,7 +45,7 @@
                               <AnchorPane>
                                  <children>
                                     <ListView id="texturesList" fx:id="texturesList" prefHeight="314.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium; -fx-font-family: sans-serif;" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <HBox layoutY="313.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                    <HBox layoutY="313.0" prefHeight="27.0" prefWidth="176.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                        <children>
                                           <Button fx:id="newTextureButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="New" HBox.hgrow="ALWAYS" />
                                           <Button fx:id="deleteTextureButton" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f55442; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Delete" HBox.hgrow="ALWAYS" />
@@ -53,15 +53,15 @@
                                     </HBox>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="textureInteractables" prefHeight="200.0" prefWidth="402.0" style="-fx-background-color: -fx-default-light;">
+                              <AnchorPane fx:id="textureInteractables" prefHeight="281.0" prefWidth="422.0" style="-fx-background-color: -fx-default-light;">
                                  <children>
-                                    <Label layoutX="34.0" layoutY="17.0" styleClass="default-label" text="Name:" AnchorPane.leftAnchor="34.0" AnchorPane.topAnchor="17.0" />
-                                    <TextField fx:id="textureField" layoutX="98.0" layoutY="14.0" prefHeight="27.0" prefWidth="135.0" styleClass="default-text-field" AnchorPane.leftAnchor="98.0" AnchorPane.topAnchor="14.0" />
+                                    <Label layoutX="26.0" layoutY="17.0" styleClass="default-label" text="Name:" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="17.0" />
+                                    <TextField fx:id="textureField" layoutX="92.0" layoutY="14.0" prefHeight="27.0" prefWidth="135.0" styleClass="default-text-field" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="14.0" />
                                     <ImageView fx:id="textureImageView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="98.0" AnchorPane.rightAnchor="98.0" AnchorPane.topAnchor="150.0" />
-                                     <Button fx:id="saveTextureButton" layoutX="329.0" layoutY="4.0" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Save" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" HBox.hgrow="ALWAYS" />
-                                    <Label layoutX="14.0" layoutY="49.0" styleClass="default-label" text="Location:" />
-                                    <TextField fx:id="textureLocationField" layoutX="98.0" layoutY="46.0" prefHeight="27.0" prefWidth="242.0" styleClass="default-text-field" />
-                                    <Button fx:id="chooseTextureButton" layoutX="355.0" layoutY="46.0" mnemonicParsing="false" styleClass="default-button" text="Choose" AnchorPane.topAnchor="46.0" />
+                                     <Button fx:id="saveTextureButton" layoutX="353.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Save" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="14.0" HBox.hgrow="ALWAYS" />
+                                    <Label layoutX="6.0" layoutY="56.0" styleClass="default-label" text="Location:" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="56.0" />
+                                    <TextField fx:id="textureLocationField" layoutX="90.0" layoutY="53.0" prefHeight="27.0" prefWidth="242.0" styleClass="default-text-field" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="53.0" />
+                                    <Button fx:id="chooseTextureButton" layoutX="347.0" layoutY="53.0" mnemonicParsing="false" styleClass="default-button" text="Choose" AnchorPane.leftAnchor="347.0" AnchorPane.topAnchor="53.0" />
                                  </children></AnchorPane>
                            </items>
                         </SplitPane>
@@ -77,7 +77,7 @@
                                   <AnchorPane>
                                       <children>
                                           <ListView id="gameObjectsList" fx:id="gameObjectsList" prefHeight="314.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium; -fx-font-family: sans-serif;" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                          <HBox layoutY="313.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                          <HBox layoutY="313.0" prefHeight="27.0" prefWidth="193.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                                               <children>
                                                   <Button fx:id="newGameObjectButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="New" HBox.hgrow="ALWAYS" />
                                                   <Button fx:id="deleteGameObjectButton" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f55442; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Delete" HBox.hgrow="ALWAYS" />
