--- a/src/main/resources/launcher.fxml
+++ b/src/main/resources/launcher.fxml
@@ -18,5 +18,7 @@
             <Font size="15.0" />
          </font>
       </Label>
+
+      <Button fx:id="globalPreferencesButton" layoutX="539.0" layoutY="343.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: transparent;" styleClass="default-button" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
    </children>
 </AnchorPane>
