--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -156,7 +156,7 @@
       <AnchorPane layoutY="379.0" prefHeight="26.0" prefWidth="600.0" style="-fx-background-color: -fx-default-dark;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Label fx:id="statusLabel" layoutX="505.0" style="-fx-font-family: sans-serif;" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="3.0" />
-            <Label fx:id="mousePositionLabel" layoutX="8.0" layoutY="4.0" style="-fx-font-family: sans-serif; -fx-text-fill: -fx-default-extra-light;" AnchorPane.leftAnchor="100.0" />
+            <Label fx:id="mousePositionLabel" layoutX="8.0" layoutY="4.0" style="-fx-font-family: sans-serif; -fx-text-fill: -fx-default-extra-light;" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="3.0" />
             <Button fx:id="globalPreferencesButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: transparent;" styleClass="default-button" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0" />
          </children>
       </AnchorPane>
