Fixed some theme change issues

--- a/src/main/resources/engine.css
+++ b/src/main/resources/engine.css
@@ -5,7 +5,7 @@
     src: url('fonts/Montserrat/Montserrat-Regular.ttf');
 }
 
-/* The Dark Theme For Creating!!! TODO: REMOVE */
+/* The Dark Theme For Creating!!! TODO: REMOVE *//*
 * {
     -fx-tab-color: #70a7ff;
     -fx-tab-selected-color: #4287f5;
@@ -14,7 +14,7 @@
     -fx-default-light: #3c3f41;
     -fx-default-extra-light: #61676b;
     -fx-default-text-fill: #ffffff;
-}
+}*/
 
 /* Defaults */
 .default-text-field {
