--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -16,19 +16,19 @@
                      <children>
                         <Group layoutX="14.0" layoutY="14.0">
                            <children>
-                              <TextField fx:id="projectName" layoutX="138.0" styleClass="default-text-field" />
+                              <TextField fx:id="projectName" layoutX="138.0" promptText="Game Name" styleClass="default-text-field" />
                               <Label layoutY="5.0" styleClass="default-label" text="Project Name:" textFill="#e4e4e4" />
                            </children>
                         </Group>
                         <Group layoutX="14.0" layoutY="52.0">
                            <children>
-                              <TextField fx:id="author" layoutX="137.0" styleClass="default-text-field" />
+                              <TextField fx:id="author" layoutX="137.0" promptText="Company Name" styleClass="default-text-field" />
                               <Label layoutY="5.0" styleClass="default-label" text="Author:" textFill="#e4e4e4" />
                            </children>
                         </Group>
                         <Group layoutX="14.0" layoutY="91.0">
                            <children>
-                              <TextField fx:id="version" layoutX="137.0" styleClass="default-text-field" />
+                              <TextField fx:id="version" layoutX="137.0" promptText="Eg. 4.6.2" styleClass="default-text-field" />
                               <Label layoutY="5.0" styleClass="default-label" text="Version:" textFill="#e4e4e4" />
                            </children>
                         </Group>
